# System_integration_2024

./: .gitignore  System_integration_2024.sln
01_assignments/02_data/: main.py
01_assignments/05._Real-time_comunication/: integrationMedSystemerne.md
01_miscellane/: paymentiframe.html
01a File Formats Bonanza/c#Parsing/: c#Parsing.sln
02_data_files/: getGoogle.html  me.json
03_Modules/html_no_moduels/: index.html  index.js  myModule.js
03_Modules/html_with_moduls/: index.html  myModule.js
03_Modules/node_commenjs_moduls/: index.js  myModule.js
03_Modules/node_es_modules/: index.js  myModule.js  package-lock.json
03_Modules/python_modules/: main.py
04_encoding_Decoding/node/: index.js
04_encoding_Decoding/python/: main.py
05_python_envoierment/02.pipenv_envoirment/: main.py
05_python_envoierment/03_poetry_envoirment/: mian.py
06_Servers/node/: app.js  package-lock.json  package.json
06_Servers/python/: mian.py  pyproject.toml
08_server-to-server/node/: app.js  package.json
08_server-to-server/python/: main.py  pyproject.toml
09_Enviorments_Variabler/node/: .env-dev  index.js  package.json
09_Enviorments_Variabler/python/: .env_template  main.py  pyproject.toml
11_Short_Polling/: package-lock.json  package.json
12_Long_Polling/node/: package-lock.json  package.json
13_ServerSentEvent/python-sse/: pyproject.toml
15_Webhooks/node-Webhooks/: app.js
15_Webhooks/python-webhooks/: main.py  pyproject.toml
16_websokets/node/: cleients.js  index.html  package-lock.json  server.js
16_websokets/python-plain/: pyproject.toml
17_CORS/python_/: main.py  pyproject.toml
18_Multipart_Forms/node-multipart-forms/: app.js  package-lock.json  package.json
18_Multipart_Forms/python-multipart-froms/: pyproject.toml
23._Database_Migration/node-knex/: package.json
23._Database_Migration/python/: pyproject.toml
24._Redis/node-redis/: index.js  package-lock.json  package.json
24._Redis/python-basic-example/: pyproject.toml
24._Redis/python-pub-sub/: pyproject.toml
24._Redis/python-task-queues/: pyproject.toml  scheduler.py
25._OpenAPI/java-openAPI/: pom.xml  swagerConfig.java
25._OpenAPI/node-OpenAPI/: app.js  package-lock.json  package.json
25._OpenAPI/python-OpenAPI/: pyproject.toml
encodingDecoding/: main.py
frontend_backned komunikation/node/: client.html  package-lock.json  package.json  server.js
(+69 files in other folders)
