[tool.poetry]
name = "server-to-server"
version = "0.1.0"
description = ""
authors = ["FrederikkeGylstorff1 <frederikke@sneugle.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
