[tool.poetry]
name = "python-webhooks"
version = "0.1.0"
description = ""
authors = ["FrederikkeGylstorff1 <frederikke@sneugle.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
