[tool.poetry]
name = "python-task-queues"
version = "0.1.0"
description = ""
authors = ["FrederikkeGylstorff1 <frederikke@sneugle.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.4"
rq = "^1.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
